--- a/work.html
+++ b/work.html
@@ -65,21 +65,21 @@
       <br>
 
       <section>
-        <a href="/html/project3.html">
+        <a href="/html/project3.html" target="_blank">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook]<br> Who are the top 25 basketball players of the past 20 years? I analyze 200k+ rows of data -- including per game data from 1,447 unique players and 24,600 games -- to find out: </h2>
             <img src="/img/NBA_2000s.png"alt="NBA-2000">
           </div>
         </a>
         
-        <a href="/html/project2.html">
+        <a href="/html/project2.html" target="_blank">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook] <br> Where are the top 5 best airbnbs to stay in Paris {:answer}</h2>
             <img src="/img/bos_airbnb.png"alt="boston-airbnb">
           </div>
         </a> 
         
-        <a href="/html/project1.html">
+        <a href="/html/project1.html" target="_blank">
            <div class="card">
              <h2><span><i></i></span> [Open Workbook] <br>Things that make you go hmmm....How many Python files did I create while teaching myself to program?
                  Is there a correlation between COVID-19 cases and files created?
@@ -94,7 +94,7 @@
            </div>
           </a>
 
-         <a href="/html/project4.html">
+         <a href="/html/project4.html" target="_blank">
            <div class="card">
              <h2><span><i></i></span> [Open Workbook] <br>Starter Code and Resources - a running list of starter code that I find helpful in daily use with python and SQL</h2>
              <img src="/img/stocks.webp"alt="stocks">
