--- a/pandas.html
+++ b/pandas.html
@@ -62,7 +62,11 @@
         <figcaption>Using pandas to read in a csv file of IMDB movie data and changing view options</figcaption>
       </figure>
     <hr class="dashed">
-    <h4>Identifying and dropping null values</h4>
+
+    <h5>The excellent pandas_profiling package can be used to create a profile report for a given DataFrame</h5>
+    <p><a href="/html/titanic_profile_report.html">Click here</a> for a sample profile report from the popular titanic survivors dataset</p>
+    <br>
+    <h4>Identifying and examining missing values and dropping null values</h4>
     <p></p>
     <figure>
       <img src="/img/null_sum.png" srcset=""alt="null-sum">
@@ -73,15 +77,22 @@
       <figcaption>Dropping nulls based on conditional null values</figcaption>
     </figure>
     <hr class="dashed">
-    <br><h4>Formatting integers/floats in DataFrames through method-chaining</h4>
-    <p></p>
-    <hr class="dashed">
+  
     <br><h4>Using a for loop to fill null values with the median values</h4>
     <p></p>
     <figure>
       <img src="/img/null_for_loop.png" srcset=""alt="null-forloop">
       <figcaption>Replacing null values with median values</figcaption>
     </figure>
+    <hr class="dashed">
+    <br><h4>Formatting integers/floats in DataFrames through method-chaining</h4>
+    <p></p>
+    <figure>
+      <img src="/img/negative_red.png" srcset=""alt="negative-red">
+      <figcaption>Using styling formatting to change negative values to red</figcaption>
+    </figure>
+
+    <p></p>
     <hr class="dashed">
     <br><h4>Q Cut and percentiles/quantiles</h4>
     <p></p>
