--- a/pandas.html
+++ b/pandas.html
@@ -56,27 +56,39 @@
     
     <h1>Pandas</h1>
     <h4>Loading files and changing display options</h4>
-    <p></p>
+    <p>The below code uses pandas to read in data from a csv file, then prints an f-string that summarizes the size of the loaded-in DataFrame. Then I change the viewing options to show a minimum of 20 rows, a max of 100 rows, and the # of visible columns is set to the # of total columns in the dataset.</p>
     <figure>
         <img src="/img/load_csv.png" srcset=""alt="load-csv">
         <figcaption>Using pandas to read in a csv file of IMDB movie data and changing view options</figcaption>
       </figure>
     <hr class="dashed">
 
-    <h5>The excellent pandas_profiling package can be used to create a profile report for a given DataFrame</h5>
-    <p><a href="/html/titanic_profile_report.html">Click here</a> for a sample profile report from the popular titanic survivors dataset</p>
+    <h4>The excellent pandas_profiling package can be used to create a profile report for a given DataFrame in html format </h4>
+    <p><a href="/html/titanic_profile_report.html" target="_blank" >Click here</a> for a sample profile report from the popular titanic survivors dataset. The report succintly summarizes the data set and serves as a great starting point for analysis of any large datasets. The example below categorizes the data by variable type but there is so much more in the report.  </p>
+    <figure>
+      <img src="/img/titanic_profile.png" srcset=""alt="titanic_profile">
+    </figure>
     <br>
     <h4>Identifying and examining missing values and dropping null values</h4>
-    <p></p>
+    <p>The below code counts/sums the total # of missing values by variable.</p>
     <figure>
       <img src="/img/null_sum.png" srcset=""alt="null-sum">
       <figcaption>Identifying and counting all n/a values by feature</figcaption>
+    </figure>
+    <figure>
+      <img src="/img/missing_perc.png" srcset=""alt="missing-%">
+    </figure>
+
+    <figure>
+      <img src="/img/missing_data.png" srcset=""alt="drop_na">
+      <figcaption>Visualizing patterns in missing data</figcaption>
     </figure>
     <figure>
       <img src="/img/drop_na.png" srcset=""alt="drop_na">
       <figcaption>Dropping nulls based on conditional null values</figcaption>
     </figure>
     <hr class="dashed">
+
   
     <br><h4>Using a for loop to fill null values with the median values</h4>
     <p></p>
