--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
         <a href="/html/project2.html" target="_blank">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook] <br> Where are the top 5 best airbnbs to stay in Paris {:answer}</h2>
-            <img src="/img/bos_airbnb.png"alt="boston-airbnb">
+            <img src="/img/paris_airbnb3.png"alt="paris-airbnb">
           </div>
         </a> 
         
