--- a/project3.html
+++ b/project3.html
@@ -60,9 +60,12 @@
       <img src="/img/Game_score_scatter.png" srcset=""alt="game-score-scatter">
       <figcaption>Player game scores for all games played since 2000 (n=230,326); the increased importance of the 3 point shot, as indicated by red, is apparent in what can only be reffered to as the "Steph Curry effect" </figcaption>
     </figure>
+    <p></p>
+    <h4>The Dataset</h4>
+    <ul> <li>I used an API, web scraping, and Pandas to get all game-logs from each player for each team since the 2000 season. Much of my data collection relied on the  <span><a href="https://www.basketball-reference.com/" target="_blank"> excellent Basketball-Reference website,</a></span>  which has compiled statistics for seemingly every NBA game and NBA player that has ever played (and even data on the defunct ABA league). For each of the 30 franchises in the NBA, I wrote code that pulled in the game log (an individual player's stats during a game) for each player on every team for each of the 82 games played for each season since 2000.</li>  <li>All in, my dataset has 230,326 values. For a well summarized look at the dataset, using a sample of 10,000 values for memory preservataion, please <a href="/html/NBA_since_2000_profile_sample.html" target="_blank" >click here</a>.</li></ul>
+    <p></p>
     <h4>See below for scorching hot takes: </h4>
     <ol>
-      
       <li>The best individual game during the past 20 years came from Kobe Bryant (Rest in Peace) in the 2006 season, when he scored 81 points, the 2nd highest in league history, to beat the Toronto Raptors. The next best game was a 60 point triple-double by James Harden, followed by a 70 point game by Devin Booker (the 3rd most points in a single game of all time). </li>
       <figure>
         <img src="/img/top_5.png" srcset=""alt="top-5-games">
