--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <figcaption>Probably the only time I will be wearing a suit on a boat @ Cotuit, Massachusetts</figcaption>
     </figure>
     <p>Previously at <a href="https://www.bc.edu/" target="_blank">Boston College</a>, <a href="https://www.sciencespo.fr/en" target="_blank">Sciences Po</a>, currently at a large global asset management firm</a>.
-    <br><br>Also an <span><a href="https://www.goodreads.com/user/year_in_books/2021/21888346" target="_blank"> avid reader</a></span>, <span><a href="https://www.strava.com/athletes/24468767" target="_blank"> a nostalgic athlete</a></span>, <span></span><a href="https://github.com/bme3412" target="_blank"> a daily githubber</a></span>, and a <span><a href="/html/fun.html" target="_blank"> global traveller.</a></span><br>Proud autodidact; always <span><a href="https://www.datacamp.com/profile/brendanerhard" target="_blank"> learning</a></span>, always <span><a href="https://www.udemy.com/user/brendan-erhard/" target="_blank"></span</a>improving.</a></span><br>Chasing that <span><a href="/img/pierce.jpeg" target="_blank"> farewell tour.</a></span>
+    <br><br>Also an <span><a href="https://www.goodreads.com/user/year_in_books/2021/21888346" target="_blank"> avid reader</a></span>, <span><a href="https://www.strava.com/athletes/24468767" target="_blank"> a nostalgic athlete</a></span>, <span></span><a href="https://github.com/bme3412" target="_blank"> a daily githubber</a></span>, and a <span><a href="/html/fun.html" target="_blank"> global traveller.</a></span><br>Proud autodidact; always learning, always improving.</a></span><br>Chasing that <span><a href="/img/pierce.jpeg" target="_blank"> farewell tour.</a></span>
       
     </p>
     
