--- a/project2.html
+++ b/project2.html
@@ -52,15 +52,64 @@
       <a href="/html/work.html">Work</a> 
       <a href="/html/fun.html">When Not Working</a>  
     </nav>
+    <h2>Table of contents:</h2>
+    <ul>
+      <li>Intro and project objective</li>
+      <li>The dataset</li>
+      <li>Cleaning and preprocessing</li>
+      <li>Exploratory data analysis</li>
+      <li>Preparing the model for modeling</li>
+      <li>Building a neural network(?)</li>
+      <li>Conclusion and recommendations</li>
+    </ul>
+
+    <h2>Intro</h2>
+    <p>I studied abroad in Paris from February to June 2009.</p>
     <h2>Objective: Find the best airbnb in Paris:</h2>
-    <p>I want to write a function that 1 click of a button will pull in data from airbnb, read the files, and output data/visualization. This will require web scrapping (to get the file names); html requests (to read the data); pandas dataframes and matplotlib. Then will use the processed data to predict rental prices by geography.</p>
-    <p></p>
+    <p>I have always been fascinated by airbnb.</p>
     <figure>
-      <img src="/img/airbnb_python.png" srcset=""alt="airbnb-python">
-      <figcaption>Getting the data</figcaption>
+      <img src="/img/break5.png" srcset=""alt="break">
     </figure>
-   
-   
+    <p></p>
+    
+   <h2>The dataset</h2>
+   <br>
+   <figure>
+    <img src="/img/airbnb_python.png" srcset=""alt="airbnb-python">
+    <figcaption>Getting the data</figcaption>
+  </figure>
+   <figure>
+    <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+  <h2>Cleaning and pre-processing</h2>
+  <h3>Importing the libraries and data</h3>
+  <figure>
+    <img src="/img/import_paris.png" srcset=""alt="import-paris">
+    <figcaption>Importing the file - which contains 50,133 AirBnb listings</figcaption>
+  </figure>
+  <h3>Dropping initial columns</h3>
+  <p>To simplify the dataset, I will drop columns that will not useful in predicting price. I also will check for missing data.</p>
+  <figure>
+    <img src="/img/drop_initial.png" srcset=""alt="drop-initial">
+  </figure>
+  <figure>
+    <img src="/img/isna_sum.png" srcset=""alt="isna-sum">
+  </figure>
+  <h3>Description of each column</h3>
+  <h3>Cleaning individual columns</h3>
+  <figure>
+    <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+  <h2>Exploratory data analysis</h2>
+  <h4>Time Series</h4>
+  <h4>Numerical features</h4>
+  <h4>Categorical features</h4>
+  <h4>Boolean features</h4>
+  <figure>
+    <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+  <h2>Preparing the data for modeling</h2>
+
     <footer>
       <hr/>
       <div class="contact">
