--- a/project3.html
+++ b/project3.html
@@ -171,7 +171,9 @@
     <h2>Random Thought 6: The Steph Curry effect </h2>
     <p></p>
    
-    
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+    </figure>
     <h2>Appendix: How did I get all the data? I created my own data set</h2>
     <br>
     <h4>First, I used an API, web scraping, and Pandas to get all game-logs from each player for each team since the 2000 season</h4>
