--- a/plotting.html
+++ b/plotting.html
@@ -65,8 +65,19 @@
         <img src="/img/annotate_plit.png" srcset=""alt="annotate-plt">
         <figcaption>Annotating plots in matplotlib.pyplot</figcaption>
       </figure>
-    <hr class="dashed">
-   
+    <figure>
+        <img src="/img/break5.png" srcset=""alt="break">
+    </figure>
+      <p></p>
+      <h4>Multiple plots using subplots</h4>
+      <p></p>
+      <figure>
+        <img src="/img/subplot_code.png" srcset=""alt="subplot-code">
+      </figure>
+      <figure>
+        <img src="/img/subplot.png" srcset=""alt="subplot">
+        <figcaption>subplots using matplotlib</figcaption>
+      </figure>
     <footer>
       <hr/>
       <div class="contact">
