--- a/resources.html
+++ b/resources.html
@@ -57,27 +57,27 @@
     <br><br>
     <h4>YouTube channels</h4>
     <ul>
-        <li>Pydata: <a href="https://www.youtube.com/c/PyDataTV">link</a></li>
-        <li>Corey Schafer: <a href="https://www.youtube.com/c/Coreyms">link</a></li>
-        <li>sentdex: <a href="https://www.youtube.com/c/sentdex">link</a></li>
-        <li>Ken Jee: <a href="https://www.youtube.com/c/KenJee1">link </a></li>
-        <li>Brad Traversy: <a href="https://www.youtube.com/c/TraversyMedia">link </a></li>
+        <li>Pydata: Interesting presentations made by python enthusiasts with a focus on best practices and cutting edge technologies and applications <a href="https://www.youtube.com/c/PyDataTV">[link]</a></li>
+        <li>Corey Schafer: Excellent pace for beginners, he has great content for matplotlib, pandas and other fundamental python building blocks <a href="https://www.youtube.com/c/Coreyms">[link]</a></li>
+        <li>sentdex: early adopter (content is a bit dated) but great content for applying python to finance, among other demonstrated use cases <a href="https://www.youtube.com/c/sentdex">[link]</a></li>
+        <li>Ken Jee: nice focus on data science applications <a href="https://www.youtube.com/c/KenJee1">[link] </a></li>
+        <li>Brad Traversy: inspirational software developer who does a great job at explaining and demonstrating software concepts while also building applications for each video <a href="https://www.youtube.com/c/TraversyMedia">[link] </a></li>
     </ul>
     <h4>Coding platforms</h4>
     <ul>
-        <li>Udemy: <a href="https://www.udemy.com/">link</a></li>
-        <li>Datacamp: <a href="https://www.datacamp.com/">link</a></li>
-        <li>codeacademy: <a href="https://www.codecademy.com/">link</a></li>
-        <li>stackoverflow: <a href="https://stackoverflow.com/">link </a></li>
-        <li>kaggle: <a href="https://www.kaggle.com/">link </a></li>
+        <li>Udemy: <a href="https://www.udemy.com/">[link]</a></li>
+        <li>Datacamp: <a href="https://www.datacamp.com/">[link]</a></li>
+        <li>codeacademy: <a href="https://www.codecademy.com/">[link]</a></li>
+        <li>stackoverflow: <a href="https://stackoverflow.com/">[link] </a></li>
+        <li>kaggle: <a href="https://www.kaggle.com/">[link] </a></li>
     </ul>
     <h4>Books read:</h4>
     <ul>
-        <li>Pandas for Everyone: Python Data Analysis <a href="https://www.amazon.com/gp/product/0134546938/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1">link</a></li>
-        <li>Python Crash Course: <a href=https://www.amazon.com/gp/product/1593276036/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>link</a></li>
-        <li>Learn Python 3 the Hard Way <a href=https://www.amazon.com/gp/product/0134692888/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>link</a></li>
-        <li>Hands-on Data Visualization with Bokeh <a href=https://www.amazon.com/gp/product/1789135400/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>link </a></li>
-        <li>Data Science from Scratch: First Principles with Python <a href=https://www.amazon.com/gp/product/1492041130/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>link </a></li>
+        <li>Pandas for Everyone: Python Data Analysis <a href="https://www.amazon.com/gp/product/0134546938/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1">[link]</a></li>
+        <li>Python Crash Course: <a href=https://www.amazon.com/gp/product/1593276036/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>[link]</a></li>
+        <li>Learn Python 3 the Hard Way <a href=https://www.amazon.com/gp/product/0134692888/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>[link]</a></li>
+        <li>Hands-on Data Visualization with Bokeh <a href=https://www.amazon.com/gp/product/1789135400/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>[link] </a></li>
+        <li>Data Science from Scratch: First Principles with Python <a href=https://www.amazon.com/gp/product/1492041130/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>[link] </a></li>
     </ul>
 
     <footer>
