--- a/machine_learning.html
+++ b/machine_learning.html
@@ -61,7 +61,9 @@
         <img src="/img/ml_import.png" srcset=""alt="ml-import">
         <figcaption>Importing libraries</figcaption>
       </figure>
-    <hr class="dashed">
+    <figure>
+        <img src="/img/break5.png" srcset=""alt="break">
+    </figure>
    
     <footer>
       <hr/>
