--- a/mystory.html
+++ b/mystory.html
@@ -65,22 +65,24 @@
               Your browser does not support the
               <code>audio</code> element.
       </audio>
-    <p>Here's how I became a tech investor:</p>
-    <ol>
-      <li>I studied abroad in Paris, France in 2009 -- which was a time of tremendous personal growth -- and as the financial crisis hit back home I followed the headlines and the wild moves in the stock market, which sparked curiousity and an interest in learning about investing.</li> <br>
+    <p>Here's how I became a public equity investor:</p>
+    <ul>
+      <li>I studied abroad in Paris, France in 2009 -- which was a time of tremendous personal growth -- and as the global financial crisis hit back home I followed the headlines and the wild moves in the stock market, which sparked curiousity and an interest in learning about investing.</li> <br>
       <figure>
         <img src="/img/paris.jpeg" srcset=""alt="paris">
         <figcaption>At right, in 2009. Appropriately pensive at the cafe of old French society's greatest thinkers @ les Deux Magots in Paris, France</figcaption>
       </figure>
-      <li>I then read everything I could about investing - everything from Warren Buffett shareholder letters, to Seth Klarman, and then persistently networked and cold-called my way into a job as a portfolio analyst for a multi-bn $$ AUM large cap core equity strategy.</li>
-      <li>During my first job, I wore many hats and the position eventually evolved to the role of junior portfolio manager amongst a team of 3 other portfolio managers and an analyst. I did everything from sizing up trades and sending trades to the traders, running quantitative screens for idea generation, participating in investment discussions with analysts and the PM, and eventually working on my own ideas to pitch to the fund. </li>
-      <li>Then, I wanted to conduct more intensive research, so in 2015 I joined a global technology fund. At the time I joined, the strategy AUM was at $500m; it currently is over $3.7bn and has won several industry awards for outstanding performance. As an analyst on the fund reporting to a senior portfolio manager, I analyzed business models of technology companies of all kinds and sizes from all parts of the world. My process relies on gaining a thorough understanding of secular growth trends while also figuring out and stress-testing the key drivers and competitive advantages of individual businesses from a bottoms-up perspective. I was also very active in analyzing companies coming to market through IPOs. </li>
+      <li>I then read everything I could about investing - everything from Warren Buffett shareholder letters, to books by Peter Lynch and writings of Seth Klarman, to the 10-Ks of my favorite companies. After graduating in 2010 I  then persistently networked and cold-called my way into a job as a portfolio analyst for a multi-billion $$ AUM large cap core equity strategy.</li>
+      <li>During my first job, I wore many hats and the position eventually evolved to the role of junior portfolio manager amongst a team of 3 other portfolio managers and an analyst. I did everything from sizing up trades and sending trades to the traders, running quantitative screens for idea generation, participating in investment discussions with analysts and the PM, and eventually working on my own ideas to pitch to the fund. </li></ul>
+    <p>In 2015, I got a chance to be a global tech investor:</p>
+      <ul><li>Then, I wanted to conduct more intensive research, so in 2015 I joined a global technology fund. At the time I joined, the strategy AUM was at $500m; it currently is over $3.7bn and has won several industry awards for outstanding performance. As an analyst on the fund reporting to a senior portfolio manager, I analyzed business models of technology companies of all kinds and sizes from all parts of the world. My process relies on gaining a thorough understanding of secular growth trends while also figuring out and stress-testing the key drivers and competitive advantages of individual businesses from a bottoms-up perspective. I was also very active in analyzing companies coming to market through IPOs. </li></ul><br>
       <figure>
         <img src="/img/FAANG.png" srcset=""alt="FAANG">
         <figcaption>The exciting world of global technology investing</figcaption>
       </figure>
-      <li>Finally, as the COVID-19 pandemic hit, and after learning so much about the ability of technology to create tremendous productivity gains through use cases such as AI and machine learning, I dedicated myself to learning python. I relied on everything from books, to YouTube videos, to meetup groups, as well as online communities such as StackOverflow, and finally learning platforms such as DataCamp and Udemy, to learn the ins and outs of python and its various libraries. Through intensive practice, sincere interest, and grit, I wrote code most days and realized the seemingly untapped power of programming.</li>
-      <li>Now - in 2022, I am looking for a job as a data scientist. And when not writing code, watching basketball, or exploring new countries to visit, you can find me on the weekends on Cape Cod, usually at my favorite beach. </li> <br>
+      <p>And now I want to use data science to enhance my investment process:</p>
+      <ul><li>Finally, as the COVID-19 pandemic hit, and after learning so much about the ability of technology to create tremendous productivity gains through use cases such as AI and machine learning, I dedicated myself to learning python. I relied on everything from books, to YouTube videos, to meetup groups, as well as online communities such as StackOverflow, and finally learning platforms such as DataCamp and Udemy, to learn the ins and outs of python and its various libraries. Through intensive practice, sincere interest, and grit, I wrote code most days and realized the seemingly untapped power of programming.</li>
+      <li>Now - in 2022, I am looking for a job as a data scientist. And when not writing code, watching basketball, or exploring new countries to visit, you can find me on the weekends on Cape Cod, usually at my favorite beach. </li> </ul><br>
     </ol> 
     <figure>
       <img src="/img/sampsons.png" srcset=""alt="sampson">
