--- a/about.html
+++ b/about.html
@@ -54,7 +54,10 @@
     </nav>
     
     <h2>About Me</h2>
-    <p>Hi, I’m Brendan. <br>I'm a tech investor who fell in love with programming; I want to use programming to become a better investor. <br> <br> I started from scratch and learned html/css and some javascript to make this website, with the goal of demonstrating my interest in using intensive python-driven data analysis to recommend actionable and decisive investment outcomes.</p>
+    <p>Hi, I’m Brendan. <br>I'm a tech investor who fell in love with programming; I want to use programming to refine my logical, actionable and intentional process to idenfity the most compelling investment opportunities in the global public equity markets. <br> <br> I started from scratch and learned html/css and some javascript to make this website, with the goal of demonstrating my interest in using intensive python-driven data analysis to recommend actionable and decisive outcomes.</p>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <figcaption>Suggested listening: Kool & The Gang, 'Summer Madness'</figcaption>
       <audio
