--- a/pandas.html
+++ b/pandas.html
@@ -61,7 +61,9 @@
         <img src="/img/load_csv.png" srcset=""alt="load-csv">
         <figcaption>Using pandas to read in a csv file of IMDB movie data and changing view options</figcaption>
       </figure>
-    <hr class="dashed">
+      <figure>
+        <img src="/img/break5.png" srcset=""alt="break">
+    </figure>
 
     <h4>The excellent pandas_profiling package can be used to create a profile report for a given DataFrame in html format </h4>
     <p><a href="/html/titanic_profile_report.html" target="_blank" >Click here</a> for a sample profile report from the popular titanic survivors dataset. The report succintly summarizes the data set and serves as a great starting point for analysis of any large datasets. The example below categorizes the data by variable type but there is so much more in the report.  </p>
@@ -87,7 +89,9 @@
       <img src="/img/drop_na.png" srcset=""alt="drop_na">
       <figcaption>Dropping nulls based on conditional null values</figcaption>
     </figure>
-    <hr class="dashed">
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
 
   
     <br><h4>Using a for loop to fill null values with the median values</h4>
@@ -96,7 +100,9 @@
       <img src="/img/null_for_loop.png" srcset=""alt="null-forloop">
       <figcaption>Replacing null values with median values</figcaption>
     </figure>
-    <hr class="dashed">
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <br><h4>Formatting integers/floats in DataFrames through method-chaining</h4>
     <p></p>
     <figure>
@@ -105,14 +111,18 @@
     </figure>
 
     <p></p>
-    <hr class="dashed">
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <br><h4>Q Cut and percentiles/quantiles</h4>
     <p></p>
     <figure>
       <img src="#" srcset=""alt="qcut">
       <figcaption>using q cut for percentiles</figcaption>
     </figure>
-    <hr class="dashed">
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <br><h4>Filtering DataFrames based on multiple conditions</h4>
     <p></p>
     <figure>
