--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Brendan - How I got here</title>
+    <title>Brendan - Coding Resources</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
@@ -71,7 +71,7 @@
         <li>stackoverflow: <a href="https://stackoverflow.com/">[link] </a></li>
         <li>kaggle: <a href="https://www.kaggle.com/">[link] </a></li>
     </ul>
-    <h4>Books read:</h4>
+    <h4>Some of the books I have read:</h4>
     <ul>
         <li>Pandas for Everyone: Python Data Analysis <a href="https://www.amazon.com/gp/product/0134546938/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1">[link]</a></li>
         <li>Python Crash Course: <a href=https://www.amazon.com/gp/product/1593276036/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1>[link]</a></li>
