--- a/plotting.html
+++ b/plotting.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Brendan - How I got here</title>
+    <title>Brendan - Plotting Tips & Tricks</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
