--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Brendan - Best Airbnb in Paris</title>
+    <title>Brendan - Best Airbnbs in Paris</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
