--- a/resources.html
+++ b/resources.html
@@ -70,6 +70,7 @@
         <li>codeacademy: <a href="https://www.codecademy.com/">[link]</a></li>
         <li>stackoverflow: <a href="https://stackoverflow.com/">[link] </a></li>
         <li>kaggle: <a href="https://www.kaggle.com/">[link] </a></li>
+        <li>calmcode.io: <a href="https://calmcode.io/">[link] </a></li>
     </ul>
     <h4>Some of the books I have read:</h4>
     <ul>
