--- a/project3.html
+++ b/project3.html
@@ -174,7 +174,7 @@
       <img src="/img/break5.png" srcset=""alt="break">
     </figure>
     <p></p>
-    <h2>Random Thought 6: The Steph Curry effect </h2>
+    <h2>Random Thought 6: The 3-Point shot and the brilliance of Stephen Curry </h2>
     <p>Chris Ford of the Boston Celtics made the NBA's first 3-pointer in the 1979-1980 NBA season (the rookie seasons for both Larry Bird and Magic Johnson) and since then the shot has become a staple of the game. Originally introduced on a one-year trial basis, the 3-point line measured 22-feet from the hoop in the corners and 23-feet, 9 inches to the top of the arc. As the game has evolved, the importance of the 3-point shot has increased.
     </p>
     <p>The record for most 3-point shots made without a miss during a game is held by Ben Gordon, who made 9 3-pointers in a single game (twice) without a miss. While playing for the Chicago Bulls, Ben Gordon was 9 for 9 on 3-point shots on his way to 32 points (he connected on 11 shots out of a total of 19) on April 14, 2006. A bit under 6 years later (March 21, 2012), this time as a member of the Detroit Pistons, he connected on 9 3-pointers and made 13 out of 22 shots and 10 of 11 free throws to score a total of 45 points.  </p>
@@ -187,6 +187,10 @@
     </figure>
     <figure>
       <img src="/img/Steph_3P.png" srcset=""alt="steph-3p">
+    </figure>
+    <p>An interactive version  - made using the python package Altair - can be <a href="/html/steph_altair.html" >accessed here</a>. </p>
+    <figure>
+      <img src="/img/steph_altair.png" srcset=""alt="steph-altair">
     </figure>
     <figure>
       <img src="/img/break5.png" srcset=""alt="break">
