--- a/fun.html
+++ b/fun.html
@@ -108,7 +108,7 @@
   </figure>
     <figure>
       <img src="/img/stbarts.png" srcset=""alt="stbarts">
-      <figcaption>Carribean vibes @ St. Barts</figcaption>
+      <figcaption>Caribbean vibes @ St. Barts</figcaption>
     </figure>
     <figure>
       <img src="/img/break5.png" srcset=""alt="break">
