--- a/project3.html
+++ b/project3.html
@@ -181,14 +181,14 @@
     <figure>
       <img src="/img/3PT_nomiss.png" srcset=""alt="3PT-no-miss">
     </figure>
-    <p>But really, Stephen ("Steph") Curry of the Golden State Warriors is the 3-point king and his dominance at making the shot is widely credited for  influencing a next step in the game's evolution. To wit, there has only been 3 seasons in NBA history where a player have averaged over 5 threes made per game, and all 3 belong to Steph Curry. He averaged 5.3 threes per game in the 2020-21 season, 5.1 in the 2018-19 season, and 5.1 in the 2015-16 season. As of writing, duing the curreny 2021-22 season, throguh 15 game has has averaged 5.7 threes made per game. </p>
+    <p>But really, Stephen ("Steph") Curry of the Golden State Warriors is the 3-point king and his dominance at making the shot is widely credited for  influencing a next step in the game's evolution. To wit, there has only been 3 seasons in NBA history where a player have averaged over 5 threes made per game, and all 3 belong to Steph Curry. He averaged 5.3 threes per game in the 2020-21 season, 5.1 in the 2018-19 season, and 5.1 in the 2015-16 season. As of writing, through 15 games of the 2021-22 season, he has averaged 5.7 threes made per game. </p>
     <figure>
       <img src="/img/steph_3PT_ code.png" srcset=""alt="steph-3p-code">
     </figure>
     <figure>
       <img src="/img/Steph_3P.png" srcset=""alt="steph-3p">
     </figure>
-    <p>An interactive version  - made using the python package Altair - can be <a href="/html/steph_altair.html" >accessed here</a>. </p>
+    <p>An interactive version with tooltips  - made using the python package Altair - can be <a href="/html/steph_altair.html" >accessed here</a>. Code is reproduced below.</p>
     <figure>
       <img src="/img/steph_altair.png" srcset=""alt="steph-altair">
     </figure>
