--- a/time-series.html
+++ b/time-series.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Brendan - Plotting Tips & Tricks</title>
+    <title>Brendan - Pandas/Data Analysis Tips and Tricks</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
@@ -49,35 +49,13 @@
     <nav>
         <a href="/html/index.html" id="branding">Brendan</a>
         <a href="/html/about.html" >About</a>
-        <a href="/html/mystory.html">My Story</a> 
-        <a href="/html/work.html"class="active" >Work</a> 
+        <a href="/html/mystory.html">My Story</a>
+        <a href="/html/work.html" class="active">Work</a> 
         <a href="/html/fun.html">When Not Working</a>   
     </nav>
     
-    <h1>Plotting with MatplotLib</h1>
-    <h4>Annotating plots</h4>
-    <p></p>
-    <figure>
-        <img src="/img/annotate_code.png" srcset=""alt="annotate-code">
-        <figcaption></figcaption>
-      </figure>
-    <figure>
-        <img src="/img/annotate_plit.png" srcset=""alt="annotate-plt">
-        <figcaption>Annotating plots in matplotlib.pyplot</figcaption>
-      </figure>
-    <figure>
-        <img src="/img/break5.png" srcset=""alt="break">
-    </figure>
-      <p></p>
-      <h4>Multiple plots using subplots</h4>
-      <p></p>
-      <figure>
-        <img src="/img/subplot_code.png" srcset=""alt="subplot-code">
-      </figure>
-      <figure>
-        <img src="/img/subplot.png" srcset=""alt="subplot">
-        <figcaption>subplots using matplotlib</figcaption>
-      </figure>
+    <h1>Time Series</h1>
+    
     <footer>
       <hr/>
       <div class="contact">
