--- a/work.html
+++ b/work.html
@@ -97,6 +97,16 @@
              
            </div>
           </a>
+        <figure>
+            <img src="/img/break5.png" srcset=""alt="break">
+        </figure>
+         <a href="/html/food_sql.html" target="_blank">
+           <div class="card">
+             <h2><span><i></i></span> [Open Workbook] <br>You are what you eat - tracking my diet in December with SQL</h2>
+             <img src="/img/healthy-food.jpeg"alt="stocks">
+           </div>
+         </a> 
+
           <figure>
             <img src="/img/break5.png" srcset=""alt="break">
         </figure>
