--- a/food_sql.html
+++ b/food_sql.html
@@ -55,6 +55,15 @@
     </nav>
     
     <h1>Food in December</h1>
+    <figure>
+      <img src="/img/create_table.png" srcset=""alt="create-table">
+      <figcaption>Creating the database and the first table</figcaption>
+    </figure>
+    <p></p>
+    <figure>
+      <img src="/img/insert_values.png" srcset=""alt="insert-values">
+      <figcaption>Inserting values into the 'food_database' table</figcaption>
+    </figure>
     
     <footer>
       <hr/>
