--- a/food_sql.html
+++ b/food_sql.html
@@ -55,6 +55,7 @@
     </nav>
     
     <h1>Food in December</h1>
+    <p>I stepped on the scale a few days after Thanksgiving and saw a number I did not like, so in order to improve my diet I used MyFitnessPal for access to nutritional information and used MySQL to create a database to track all the meals I ate in the month of December. </p>
     <figure>
       <img src="/img/create_table.png" srcset=""alt="create-table">
       <figcaption>Creating the database and the first table</figcaption>
@@ -64,6 +65,10 @@
       <img src="/img/insert_values.png" srcset=""alt="insert-values">
       <figcaption>Inserting values into the 'food_database' table</figcaption>
     </figure>
+    <figure>
+      <img src="/img/SQL_meal_1130.png" srcset=""alt="SQL-meal">
+    </figure>
+
     
     <footer>
       <hr/>
